Fix css to show li bullets in main content, previously were not showing.

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -27,3 +27,12 @@
 	clear: both;
 	margin: 0 0 1.5em;
 }
+
+.entry-content ul {
+	list-style: disc;
+	margin-left: 2rem;
+
+	li {
+		list-style: disc;
+	}
+}
